# microscope

./: .gitignore  Makefile  README.md  channelselectwidgets.cpp  channelselectwidgets.h  datachannel.cpp  datachannel.h  datasubscriber.cpp  datasubscriber.h  fftcomputer.cpp  fftcomputer.h  main.cpp  microscope.h  microscope.pro  microscope.pro.user.-1  options.cpp  options.h  periodicupdater.cpp  periodicupdater.h  plotwindow.cpp  plotwindow.h  plotwindow.ui  pulsehistory.cpp  pulsehistory.h  pulserecord.cpp  pulserecord.h  pyproject.toml  refreshplots.cpp  refreshplots.h  resources.qrc  ruff.toml  setup.cfg  version.h
demo/: README.md  demo_noise.py  demo_noisy_TDM.py  demo_noisy_pulse.py  demo_noisy_pulse_fast.py  demo_pulses.py  message_definition.py
microscope/: __init__.py  __main__.py  channel_group.py  dastardrecord.py  dialogs.py  mainwindow.py  microscope.py  plottraces.py  plotwindow.py  subscriber.py
microscope/ui/: axesdialog.ui  help.ui  microscope.ui  plotwindow.ui
